fix spacing issues, breadcrumbs wrap

--- a/web/app/themes/sunergos-wordpress/resources/styles/blocks/global.css
+++ b/web/app/themes/sunergos-wordpress/resources/styles/blocks/global.css
@@ -22,6 +22,10 @@
 
 .wp-block-group {
   @apply container mb-20;
+
+  &.service-hero-container {
+    @apply max-md:mb-10;
+  }
 }
 
 .wp-block-group-is-layout-grid {
