--- a/web/app/themes/sunergos-wordpress/resources/styles/blocks/sunergos-footer-cta.css
+++ b/web/app/themes/sunergos-wordpress/resources/styles/blocks/sunergos-footer-cta.css
@@ -1,9 +1,9 @@
 .main {
   .sunergos-footer-cta {
-    @apply flex flex-col;
+    @apply flex flex-col relative bottom-2;
   
     span {
-      @apply relative top-2 text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-mediterraneanblue to-darklavender;
+      @apply relative text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-mediterraneanblue to-darklavender;
     }
   
     a {
