--- a/web/app/themes/sunergos-wordpress/resources/styles/components/breadcrumbs.css
+++ b/web/app/themes/sunergos-wordpress/resources/styles/components/breadcrumbs.css
@@ -1,5 +1,5 @@
 .breadcrumbs {
-  @apply flex flex-row gap-x-2;
+  @apply flex flex-row gap-x-2 flex-wrap;
 
   span {
     @apply text-twilightblue hover:text-darklavender;
